Minor title changes
title changes to better reflect the project

--- a/Lab 3/lab3.1.html
+++ b/Lab 3/lab3.1.html
@@ -6,7 +6,7 @@
 	<meta name="keywords"		  content="HTML, CSS, D3"/>
 	<meta name="author"			  content="Wong De Lorn"/>
 
-    <title>Task 2.2 Drawing with Data</title>
+    <title>Task 3.1 Scaling Your Chart - Scatter Plot</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <style>
         html, body {
@@ -109,7 +109,7 @@
 <body>
     <div class="content">
         <header>
-            <h1>Drawing with Data- Scatter Plot</h1>
+            <h1>Scaling with Data- Scatter Plot</h1>
             <h2>Author: Wong De Lorn</h2>
         </header>
         <nav>
@@ -126,16 +126,15 @@
         padding = 55; //20,90,33,95,12,44,67,21,88,50
 
         var dataset = [
-            [5, 50, 5],
-            [480, 88, 10],
-            [100, 21, 4],
-            [330, 67, 5],
-            [410, 44, 6],
-            [475, 12, 11],
-            [25, 95, 4],
-            [85, 33, 4],
-            [220, 90, 9],
-            [250, 20, 4],
+            [5, 20, 5],
+            [100, 33, 4],
+            [330, 95, 5],
+            [410, 12, 6],
+            [475, 44, 11],
+            [25, 67, 4],
+            [85, 21, 4],
+            [220, 88, 9],
+            [250, 50, 4],
             [500, 90, 5]
         ];
         
