--- a/Lab 3/lab3.2.html
+++ b/Lab 3/lab3.2.html
@@ -123,19 +123,38 @@
     <script>
         var w = 550;
         var h = 150;
+        padding = 55; //20,90,33,95,12,44,67,21,88,50
 
         var dataset = [
             [5, 20, 5],
-            [480, 90, 10],
-            [100, 33, 11],
+            [100, 33, 4],
             [330, 95, 5],
             [410, 12, 6],
             [475, 44, 11],
             [25, 67, 4],
-            [85, 21, 8],
+            [85, 21, 4],
             [220, 88, 9],
-            [250, 50, 4]
+            [250, 50, 4],
+            [500, 90, 5]
         ];
+        
+        var xScale = d3.scaleLinear()
+                        .domain([d3.min(dataset, function(d) {
+                            return d[0];
+                        }),
+                        d3.max(dataset, function(d) {
+                            return d[0];
+                        })])
+                        .range([padding, w - padding]);
+
+        var yScale = d3.scaleLinear()    
+                        .domain([d3.min(dataset, function(d) {
+                            return d[1];
+                        }),
+                        d3.max(dataset, function(d) {
+                            return d[1];
+                        })])
+                        .range([h - padding, padding]);
 
         var svg = d3.select(".chart-container")
                     .append("svg")
@@ -148,11 +167,12 @@
             .enter()
             .append("circle")
             .attr("cx", function(d, i) {
-                return d[0];
+                return xScale(d[0]);
             })
             .attr("cy", function(d) {
-                return d[1];
+            return yScale(d[1]);
             })
+
             .attr("r", function(d) {
             return d[2];  // radius based on array subposition 2. -> [0, 1, 2]
             })
@@ -175,11 +195,12 @@
             
                 //Labelling
             .attr("x", function(d) {
-                return d[0] + 10;
+                return xScale(d[0]) +10;
             })
             .attr("y", function(d) {
-                return d[1];
+            return yScale(d[1]);
             });
+
 
     </script>
     <br>
