--- a/Table of Content.html
+++ b/Table of Content.html
@@ -1,29 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
 <head>
-	<meta charset="UTF-8"/>
-	<meta name="description"	content="Data Visualisation"/>
-	<meta name="keywords"		  content="HTML,CSS,D3,Data Import"/>
-	<meta name="author"			  content="Wong De Lorn"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Table of Content</title>
 
-	<title>Task 2.4 D3 Data Import</title>
-	<script src="https://d3js.org/d3.v7.min.js"></script>
-	<!--js Script-->
-	<style>
-
-        html, body {
-            height: 100%;
+    <style>
+        html, body 
+        {
             margin: 0;
             padding: 0;
-            background-color: #EDE4E3;
-        }
-        body {
-            display: flex;
-            flex-direction: column;
-        }
-        .content {
-            flex: 1 0 auto;
         }
         header 
         {
@@ -80,12 +67,6 @@
             font-size: 120%;
         }
 
-        p {
-            margin-top: 8%;
-            margin-left: 30%;
-            margin-right: 20%;
-        }
-
         a {
             color: #007bff;
             text-decoration: none;
@@ -96,31 +77,33 @@
         }
 
         footer {
-            flex-shrink: 0;
-            padding: 10px;
             text-align: center;
-            background-color: #ffcccb;
-            border-left: 6px solid #f44336;
+            font-size: 15px;
+            color: #1c0202;
+            margin-top: 10px;
+            padding-bottom: 20px;
         }
     </style>
 </head>
-
 <body>
-    <div class="content">
-        <header>
-            <h1>Drawing with Data Import</h1>
-            <h2>Author: Wong De Lorn</h2>
-        </header>
-        <nav>
-            <button> <a href="lab2.1.html">Lab 2.1</a> </button>
-            <button> <a href="lab2.2.html">Lab 2.2</a> </button>
-            <button> <a href="lab2.3.html">Lab 2.3</a> </button>
-            <button> <a href="lab2.4.html">Lab 2.4</a> </button>
-        </nav>
-            <!--chart is displayed above footer-->
-            <p id="chart"></p>
-    </div>
-        <script src="lab2.4.js"></script>
-        <footer>COS30045 Data Visualisation<br>Wong De Lorn</footer>
+    <header>
+        <h1>Table of Content</h1>
+        <h2>Wong De Lorn</h2>
+    </header>
+    <nav>
+        <button> <a href="lab1.1.html">Lab 1.1</a> </button>
+        <button> <a href="lab1.2.html">Lab 1.2</a> </button>
+        <button> <a href="lab1.3.html">Lab 1.3</a> </button>
+    </nav>
+	<nav>
+        <button> <a href="lab2.1.html">Lab 2.1</a> </button>
+        <button> <a href="lab2.2.html">Lab 2.2</a> </button>
+        <button> <a href="lab2.3.html">Lab 2.3</a> </button>
+		<button> <a href="lab2.4.html">Lab 2.4</a> </button>
+    </nav>
+	<nav></nav>
+        <button> <a href="lab3.1.html">Lab 3.1</a> </button>
+        <button> <a href="lab3.2.html">Lab 3.2</a> </button>
+    </nav>
 </body>
 </html>
