--- a/Lab 1/lab1.3.html
+++ b/Lab 1/lab1.3.html
@@ -7,7 +7,7 @@
 	<meta name="keywords"		  content="HTML, CSS"/>
 	<meta name="author"			  content="Wong De Lorn"/>
 
-	<title>Task 1.1 HTML and CSS Demo Page</title>
+	<title>Task 1.3 Drawing Shapes with SVG</title>
 	<!--Insert description of exercise  -->
 
 	<style>
