--- a/Lab 1/lab1.3.html
+++ b/Lab 1/lab1.3.html
@@ -129,6 +129,16 @@
 		justify-content: center; /* Centers the SVG horizontally */
 		align-items: center; /* Centers the SVG vertically, if necessary */
 		}
+        nav button.toc {
+            margin: 0 10px;
+            padding: 10px 20px;
+            background-color: #2c3e50;
+            border: 1px solid black; /* Add a border if needed */
+            color: white; /* Ensure the button text is white */
+            font-size: 16px;
+            border-radius: 5px;
+            cursor: pointer; /* Make the button cursor a pointer */
+        }
 
     </style>
 
@@ -139,6 +149,9 @@
 		<h1>Drawing Shapes with SVG</h1>
 		<h2>Wong De Lorn</h2>
 	</header>
+    <nav>
+        <button class="toc"> <a href="../Table of Content/toc.html">Table of Content</a></button>
+    </nav>
 	<nav>
         <button> <a href="lab1.1.html">Lab 1.1</a> </button>
         <button> <a href="lab1.2.html">Lab 1.2</a> </button>
