--- a/Lab 2/lab2.1.html
+++ b/Lab 2/lab2.1.html
@@ -10,7 +10,6 @@
             height: 100%;
             margin: 0;
             padding: 0;
-            background-color: #EDE4E3;
         }
         body {
             display: flex;
@@ -28,7 +27,6 @@
         }
         nav {
             margin-top: 20px;
-            margin-bottom: 80px;
             text-align: center;
         }
         nav button {
@@ -74,6 +72,19 @@
             background-color: #ffcccb;
             border-left: 6px solid #f44336;
         }
+        nav button.toc {
+            margin: 0 10px;
+            padding: 10px 20px;
+            background-color: #2c3e50;
+            border: 1px solid black; /* Add a border if needed */
+            color: white; /* Ensure the button text is white */
+            font-size: 16px;
+            border-radius: 5px;
+            cursor: pointer; /* Make the button cursor a pointer */
+        }
+        div .warning {
+            margin-top: 3%;
+        }
     </style>
 </head>
 <body>
@@ -83,12 +94,15 @@
             <h2>Author: Wong De Lorn</h2>
         </header>
         <nav>
+            <button class="toc"> <a href="../Table of Content/toc.html">Table of Content</a></button>
+        </nav>
+        <nav>
             <button><a href="lab2.1.html">Lab 2.1</a></button>
             <button><a href="lab2.2.html">Lab 2.2</a></button>
             <button><a href="lab2.3.html">Lab 2.3</a></button>
             <button><a href="lab2.4.html">Lab 2.4</a></button>
         </nav>
-        <div id="d3-content"></div>
+        <div class="warning" id="d3-content"></div>
     </div>
     <footer>COS30045 Data Visualisation<br>Wong De Lorn</footer>
 
