--- a/Lab 2/lab2.2.html
+++ b/Lab 2/lab2.2.html
@@ -13,7 +13,6 @@
             height: 100%;
             margin: 0;
             padding: 0;
-            background-color: #EDE4E3;
         }
         body {
             display: flex;
@@ -94,7 +93,7 @@
         .chart-container {
         display: flex;
         justify-content: center;
-        margin-top: 8%;
+        margin-top: 2%;
         }
         footer {
             flex-shrink: 0;
@@ -102,6 +101,16 @@
             text-align: center;
             background-color: #ffcccb;
             border-left: 6px solid #f44336;
+        }
+        nav button.toc {
+            margin: 0 10px;
+            padding: 10px 20px;
+            background-color: #2c3e50;
+            border: 1px solid black; /* Add a border if needed */
+            color: white; /* Ensure the button text is white */
+            font-size: 16px;
+            border-radius: 5px;
+            cursor: pointer; /* Make the button cursor a pointer */
         }
     </style>
 </head>
@@ -111,6 +120,9 @@
             <h1>Drawin with Data- Bar Chart</h1>
             <h2>Author: Wong De Lorn</h2>
         </header>
+            <nav>
+                <button class="toc"> <a href="../Table of Content/toc.html">Table of Content</a></button>
+            </nav>
             <nav>
                 <button> <a href="lab2.1.html">Lab 2.1</a> </button>
                 <button> <a href="lab2.2.html">Lab 2.2</a> </button>
