--- a/Lab 2/lab2.3.html
+++ b/Lab 2/lab2.3.html
@@ -13,7 +13,6 @@
             height: 100%;
             margin: 0;
             padding: 0;
-            background-color: #EDE4E3;
         }
         body {
             display: flex;
@@ -102,7 +101,17 @@
         .chart-container {
         display: flex;
         justify-content: center;
-        margin-top: 9%;
+        margin-top: 5%;
+        }
+        nav button.toc {
+            margin: 0 10px;
+            padding: 10px 20px;
+            background-color: #2c3e50;
+            border: 1px solid black; /* Add a border if needed */
+            color: white; /* Ensure the button text is white */
+            font-size: 16px;
+            border-radius: 5px;
+            cursor: pointer; /* Make the button cursor a pointer */
         }
     </style>
 </head>
@@ -112,6 +121,9 @@
             <h1>Drawing with Data- Scatter Plot</h1>
             <h2>Author: Wong De Lorn</h2>
         </header>
+        <nav>
+            <button class="toc"> <a href="../Table of Content/toc.html">Table of Content</a></button>
+        </nav>
         <nav>
             <button> <a href="lab2.1.html">Lab 2.1</a> </button>
             <button> <a href="lab2.2.html">Lab 2.2</a> </button>
