--- a/Table of Content/index.html
+++ b/Table of Content/index.html
@@ -111,6 +111,7 @@
         <nav>
             <button><a href="../Lab 3/lab3.1.html">Lab 3.1</a></button>
             <button><a href="../Lab 3/lab3.2.html">Lab 3.2</a></button>
+            <button><a href="../Lab 3/lab3.2.2.html">Lab 3.2.2</a></button>
         </nav>
     </section>
 
