--- a/Lab 1/lab1.1.html
+++ b/Lab 1/lab1.1.html
@@ -134,7 +134,7 @@
         <h2>Wong De Lorn</h2>
     </header>
     <nav>
-        <button class="toc"> <a href="../Table of Content/toc.html">Table of Content</a></button>
+        <button class="toc"> <a href="../Table of Content/index.html">Table of Content</a></button>
     </nav>
     <nav>
         <button> <a href="lab1.1.html">Lab 1.1</a> </button>
