--- a/Lab 2/lab2.1.html
+++ b/Lab 2/lab2.1.html
@@ -94,7 +94,7 @@
             <h2>Author: Wong De Lorn</h2>
         </header>
         <nav>
-            <button class="toc"> <a href="../Table of Content/index.html">Table of Content</a></button>
+            <button class="toc"> <a href="../index.html">Table of Content</a></button>
         </nav>
         <nav>
             <button><a href="lab2.1.html">Lab 2.1</a></button>
