--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <button><a href="Data-Visualisation-Lab/Lab 2/lab2.1.html">Lab 2.1</a></button>
             <button><a href="Data-Visualisation-Lab/Lab 2/lab2.2.html">Lab 2.2</a></button>
             <button><a href="Data-Visualisation-Lab/Lab 2/lab2.3.html">Lab 2.3</a></button>
-            <button><a href="Data-Visualisation-Lab/Lab 2/lab2.4.html">Lab 2.4</a></button>
+            <button><a href="https://dylandelorn.github.io/Data-Visualisation-Lab/Lab%202/lab2.4.html">Lab 2.4</a></button>
         </nav>
     </section>
     
