--- a/Lab 3/lab3.1.html
+++ b/Lab 3/lab3.1.html
@@ -123,7 +123,7 @@
             <h2>Author: Wong De Lorn</h2>
         </header>
         <nav>
-            <button class="toc"> <a href="../index.html">Table of Content</a></button>
+            <button class="toc"> <a href="index.html">Table of Content</a></button>
         </nav>
         <nav>
             <button> <a href="lab3.1.html">Lab 3.1</a> </button>
