--- a/index.html
+++ b/index.html
@@ -90,28 +90,28 @@
     <section>
         <h2>Week 1</h2>
         <nav>
-            <button><a href="Data-Visualisation-Lab/Lab 1/lab1.1.html">Lab 1.1</a></button>
-            <button><a href="Data-Visualisation-Lab/Lab 1/lab1.2.html">Lab 1.2</a></button>
-            <button><a href="Data-Visualisation-Lab/Lab 1/lab1.3.html">Lab 1.3</a></button>
+            <button><a href="Lab 1/lab1.1.html">Lab 1.1</a></button>
+            <button><a href="Lab 1/lab1.2.html">Lab 1.2</a></button>
+            <button><a href="Lab 1/lab1.3.html">Lab 1.3</a></button>
         </nav>
     </section>
     
     <section>
         <h2>Week 2</h2>
         <nav>
-            <button><a href="Data-Visualisation-Lab/Lab 2/lab2.1.html">Lab 2.1</a></button>
-            <button><a href="Data-Visualisation-Lab/Lab 2/lab2.2.html">Lab 2.2</a></button>
-            <button><a href="Data-Visualisation-Lab/Lab 2/lab2.3.html">Lab 2.3</a></button>
-            <button><a href="https://dylandelorn.github.io/Data-Visualisation-Lab/Lab%202/lab2.4.html">Lab 2.4</a></button>
+            <button><a href="Lab 2/lab2.1.html">Lab 2.1</a></button>
+            <button><a href="Lab 2/lab2.2.html">Lab 2.2</a></button>
+            <button><a href="Lab 2/lab2.3.html">Lab 2.3</a></button>
+            <button><a href="Lab 2/lab2.4.html">Lab 2.4</a></button>
         </nav>
     </section>
     
     <section>
         <h2>Week 3</h2>
         <nav>
-            <button><a href="Data-Visualisation-Lab/Lab 3/lab3.1.html">Lab 3.1</a></button>
-            <button><a href="Data-Visualisation-Lab/Lab 3/lab3.2.html">Lab 3.2</a></button>
-            <button><a href="Data-Visualisation-Lab/Lab 3/lab3.2.2.html">Lab 3.2.2</a></button>
+            <button><a href="Lab 3/lab3.1.html">Lab 3.1</a></button>
+            <button><a href="Lab 3/lab3.2.html">Lab 3.2</a></button>
+            <button><a href="Lab 3/lab3.2.2.html">Lab 3.2.2</a></button>
         </nav>
     </section>
 
