--- a/index.html
+++ b/index.html
@@ -115,6 +115,23 @@
         </nav>
     </section>
 
+    <section>
+        <h2>Week 5</h2>
+        <nav>
+            <button><a href="Lab 5/lab5.1.html">Lab 5.1</a></button>
+            <button><a href="Lab 5/lab5.2.html">Lab 5.2</a></button>
+            <button><a href="Lab 5/lab5.3.html">Lab 5.3</a></button>
+        </nav>
+    </section>
+
+    <section>
+        <h2>Week 6</h2>
+        <nav>
+            <button><a href="Lab 6/lab6.1.html">Lab 6.1</a></button>
+            <button><a href="Lab 6/lab6.2.html">Lab 6.2</a></button>
+        </nav>
+    </section>
+
     <hr>
     <footer>
         COS30045 Data Visualisation <br> Wong De Lorn
