--- a/index.html
+++ b/index.html
@@ -131,6 +131,20 @@
             <button><a href="Lab 6/lab6.2.html">Lab 6.2</a></button>
         </nav>
     </section>
+    <section>
+        <h2>Week 7</h2>
+        <nav>
+            <button><a href="Lab 7/lab7.1.html">Lab 7.1</a></button>
+            <button><a href="Lab 7/lab7.2.html">Lab 7.2</a></button>
+        </nav>
+    </section>
+    <section>
+        <h2>Week 8</h2>
+        <nav>
+            <button><a href="Lab 8/lab8.1.html">Lab 8.1</a></button>
+            <button><a href="Lab 8/lab8.2.html">Lab 8.2</a></button>
+        </nav>
+    </section>
 
     <hr>
     <footer>
