--- a/Lab 8/lab8.1.html
+++ b/Lab 8/lab8.1.html
@@ -138,6 +138,7 @@
                 <button> <a href="lab8.1.html">Lab 6.1</a> </button>
                 <button> <a href="lab8.2.html">Lab 6.2</a> </button>
             </nav>
+            <title>Victorian LGA Map</title>
             <div class="chart-container">
                 <!-- empty on purpose -->
             </div>
