--- a/Lab 8/lab8.1.html
+++ b/Lab 8/lab8.1.html
@@ -94,6 +94,7 @@
         display: flex;
         justify-content: center;
         margin-top: 2%;
+        margin-right: 10px;
         }
         footer {
             flex-shrink: 0;
@@ -106,17 +107,6 @@
             margin: 0 10px;
             padding: 10px 20px;
             background-color: #2c3e50;
-            border: 1px solid black; /* Add a border if needed */
-            color: white; /* Ensure the button text is white */
-            font-size: 16px;
-            border-radius: 5px;
-            cursor: pointer; /* Make the button cursor a pointer */
-        }
-
-        nav button.add, .remove {
-            margin: 0 10px;
-            padding: 10px 20px;
-            background-color: rgb(18, 120, 160);
             border: 1px solid black; /* Add a border if needed */
             color: white; /* Ensure the button text is white */
             font-size: 16px;
