--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
         <nav>
             <button><a href="Lab 7/lab7.1.html">Lab 7.1</a></button>
             <button><a href="Lab 7/lab7.2.html">Lab 7.2</a></button>
+            <button><a href="Lab 7/lab7.3.html">Lab 7.3</a></button>
         </nav>
     </section>
     <section>
