--- a/Lab 7/lab7.3.html
+++ b/Lab 7/lab7.3.html
@@ -138,7 +138,10 @@
             <button> <a href="lab7.3.html">Lab 7.3</a> </button>
         </nav>
             <!--chart is displayed above footer-->
-            <p id="chart"></p>
+            <div id="chart-container">
+                <div id="chart"></div>
+                <div id="legend"></div>
+            </div>
     </div>
         <script src="lab7.3.js"></script>
         <footer>COS30045 Data Visualisation<br>Wong De Lorn</footer>
